--- a/src/scss/shared/other.scss
+++ b/src/scss/shared/other.scss
@@ -1,3 +1,7 @@
+#main-content {
+  overflow-x: hidden;
+}
+
 #split-background {
   position: unset;
 }
